# projetoSara

projetoSara/: Dockerfile  docker-compose.yaml  pyproject.toml
projetoSara/projetosara/: __init__.py
