[tool.poetry]
name = "projetosara"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.100.1"

[tool.poetry.scripts]
start = "projetosara.__init__:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
